# nrf_ble_rolling_shutter_poc

./: .gitignore  CMakeLists.txt  README.md  prj.conf
src/: kitchen.c  kitchen.h  main.c  rf.c  rf.h
